--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#mongodb
+#spring.data.mongodb.uri=mongodb://flip:flip@localhost:27017/flipdb
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=50741
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=flipdb
