--- a/text-generator-py/Dockerfile
+++ b/text-generator-py/Dockerfile
@@ -6,6 +6,7 @@ RUN mkdir /gpt-2
 WORKDIR /gpt-2
 #COPY . /gpt-2
 COPY ./text_generator /gpt-2/text_generator
-COPY temp/ /gpt-2
-RUN pip3 install -r requirements.txt
+COPY requirements.txt /gpt-2
+
+RUN pip install -r requirements.txt
 RUN pip install googletrans
