--- a/text-generator-py/docker-compose.yml
+++ b/text-generator-py/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   app:
     image: text_generator
-    command: flask run
+#    command: flask run
     ports:
       - "5000:5000"
     env_file:
