--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-#mongodb
-#spring.data.mongodb.uri=mongodb://flip:flip@localhost:27017/flipdb
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=50741
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=flipdb
+#MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/flip
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.sql.init.schema-locations=classpath*:scripts/schema.sql
+spring.sql.init.data-locations=classpath*:scripts/data.sql
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
