--- a/flip-ui/Dockerfile
+++ b/flip-ui/Dockerfile
@@ -5,7 +5,7 @@ FROM node:14.17.6
 WORKDIR /app
 
 # install and cache app dependencies
-COPY package*.json /app/
+COPY package.json /app/
 RUN npm install
 RUN npm install -g @vue/cli
 
