--- a/flip-ui/package.json
+++ b/flip-ui/package.json
@@ -13,6 +13,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-perfect-scrollbar": "^1.5.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -30,8 +31,15 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "laravel-elixir-vue-2": "^0.3.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "keywords": [
+    "sidebar",
+    "menu",
+    "akahon",
+    "vue"
+  ]
 }
