update server.port config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.sql.init.data-locations=classpath*:scripts/data.sql
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
 
-server.port=8000
+server.port=${PORT:8000}
