--- a/heroku.yml
+++ b/heroku.yml
@@ -5,3 +5,5 @@ setup:
 build:
   docker:
     web: Dockerfile
+run:
+  web: java -jar /home/appuser/app/app.jar JAVA_OPTS='-Xmx384m -Xss512k -XX:+UseCompressedOops'
