--- a/heroku.yml
+++ b/heroku.yml
@@ -2,4 +2,4 @@ build:
   docker:
     web: Dockerfile
 run:
-  web: java -jar /home/appuser/app/app.jar JAVA_OPTS='-Xmx384m -Xss512k -XX:+UseCompressedOops'
+  web: java -jar /home/appuser/app/app.jar $JAVA_OPTS
