--- a/flip-ui/package.json
+++ b/flip-ui/package.json
@@ -35,5 +35,17 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "resolve": {
+    "extensions": [
+      ".wasm",
+      ".ts",
+      ".tsx",
+      ".mjs",
+      ".cjs",
+      ".js",
+      ".json",
+      ".heroku"
+    ]
   }
 }
