--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,11 @@ spring.sql.init.schema-locations=classpath*:scripts/schema.sql
 spring.sql.init.data-locations=classpath*:scripts/data.sql
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
-
 spring.jpa.show-sql=true
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 server.port=${PORT:8000}
+
+jwt.header=Authorization
+jwt.secret=somekey
+jwt.expiration=604800
