--- a/flip-ui/package.json
+++ b/flip-ui/package.json
@@ -8,14 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^2.0.8",
     "axios": "^0.22.0",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.6.5",
     "easy-circular-progress": "^1.0.4",
+    "jquery": "^3.6.1",
+    "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.6.5",
     "vue2-perfect-scrollbar": "^1.5.2",
-    "vuex": "^3.4.0"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
