--- a/flip-ui/Dockerfile
+++ b/flip-ui/Dockerfile
@@ -1,16 +1,15 @@
 # base image
-FROM node:14.17.6
+FROM node:14.21.0-slim
 
 # set working directory
 WORKDIR /app
 
 # install and cache app dependencies
-COPY package.json /app/
+COPY . ./
+# RUN npm install -g @vue/cli
 RUN npm install
-RUN npm install -g @vue/cli
 
-COPY . /app
-RUN npm run build
+# RUN npm run build
 
 # start app
 CMD ["npm", "run", "serve"]
