--- a/flip-ui/package.json
+++ b/flip-ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:prd": "vue-cli-service serve --mode prd",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
