--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/flip
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.sql.init.schema-locations=classpath*:scripts/schema.sql
-spring.sql.init.data-locations=classpath*:scripts/data.sql
+spring.sql.init.data-locations=classpath*:scripts/prod/data.sql
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
